# mls-roster-profiles

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/json/: 2024-05-01.json  2024-09-17.json  2025-03-03.json  2025-05-01.json  2025-09-18.json
src/mls_roster_profiles/: __init__.py  enum.py  grammar.peg  models.py
src/mls_roster_profiles/parsimonious/: grammar.py  nodes.py
src/mls_roster_profiles/pypdf/: enum.py  models.py  reader.py
