[tool.poetry]
name = "mls-roster-profiles"
version = "0.1.0"
description = ""
authors = [
    "Tyler Richardett <tyler.richardett@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
loguru = "^0.7.2"
pydantic = "^2.7.1"
pandas = "^2.3.2"
pypdf = "^6.0.0"
parsimonious = "^0.10.0"
itscalledsoccer = "^1.3.3"
rapidfuzz = "^3.14.0"

[tool.poetry.group.dev.dependencies]
bandit = { version = "1.8.6", extras = ["toml"] }
pre-commit = "4.3.0"
isort = "^6.0.1"
docformatter = "^1.7.5"
ipykernel = "^6.25.2"
ruff = "^0.12.11"

[tool.poetry.group.test.dependencies]
pytest-cov = "6.2.1"
pytest-mock = "<3.14.2"
pytest-runner = "^6.0.0"
pytest = "8.4.1"
pytest-github-actions-annotate-failures = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.docformatter]
recursive = true
pre-summary-newline = true
blank = true
in-place = true
black = true
style = "google"
